--- a/index.html
+++ b/index.html
@@ -893,9 +893,10 @@
                 <div class="section-divider"></div>
             </div>
             <div class="about-content">
-                <p>Initiated in 2023, the Finance & Investments Cell at ARSD College is a student-driven initiative to facilitate knowledge sharing on matters of finance, economics, and related fields.</p>
-                <p>The cell aims to provide a platform to develop financial instincts among young minds through regular workshops, events, and continued collaboration with the industry, bridging the gap between academia and practice.</p>
-                <p>Our mission is to empower students with practical financial knowledge and investment skills through hands-on learning experiences and expert interactions.</p>
+                <p>Welcome to the official website of the Finance and Investment Cell (FIC), Atma Ram Sanatan Dharma College, University of Delhi.
+                 Since its inception in 2019, FIC ARSD has consistently worked towards creating a financially literate generation of students who 
+                are well-versed in economic thinking and investment strategies. Our home page aims to introduce visitors to our vibrant student-driven initiative.
+                <p> We believe in empowering individuals through knowledge and helping them make informed decisions about their financial futures.</p>
                 <a href="#" class="cta-button nav-link" data-page="about" style="background-color: var(--primary-color); color: white; margin-top: 1.5rem;">Learn More About Us</a>
             </div>
         </section>
@@ -1318,6 +1319,7 @@ remind us why financial literacy matters
                 <p>Where knowledge meets opportunity</p>
             </div>
         </section>
+        
 
         <section class="events-section">
             <div class="section-header">
@@ -1405,8 +1407,15 @@ remind us why financial literacy matters
         </section>
 
         <section class="contact-section">
+           
             <div class="section-header">
-                <h2>SEND US A MESSAGE</h2>
+                 We welcome you to reach out to us with your queries, collaboration ideas, or feedback.<br> The Finance and Investment Cell of ARSD is always open to connecting with curious minds,<br> industry professionals, and like-minded organizations.<br>
+
+You can write to us at ficarsd19@gmail.com or follow our latest updates on Instagram (@ficarsd) and <br>LinkedIn (FIC ARSD). If you’re looking to speak with someone from the team directly,<br> feel free to contact Abhishek Tiwari, the President, at +91 8929201929.<br> Our college is located at Dhaula Kuan, New Delhi, and our members are always eager to engage in new ideas, partnerships, <br>and projects that align with our mission of financial empowerment.
+
+Let’s build something meaningful together.<br>
+<br>
+              <br>  <h2>SEND US A MESSAGE</h2>
                 <div class="section-divider"></div>
             </div>
             <!-- Modified Form with Web3Forms integration -->
