--- a/index.html
+++ b/index.html
@@ -1642,7 +1642,7 @@ Let’s build something meaningful together.<br>
             <p>Atma Ram Sanatan Dharma College, University of Delhi</p>
         </div>
         <div class="qbear-collab">
-            <a href="https://qbearproject.github.io/qbear-project.github.io/" target="_blank">Designed and Managed by - QBear</a>
+            <a href="https://qbearproject.github.io/qbear-project.github.io/" target="_blank">Designed and Maintained by - QBear</a>
         </div>
     </footer>
 
