--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finance & Investments Cell - ARSD College</title>
+    <title>Finance & Investment Cell - ARSD College</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -530,7 +530,7 @@
                 height: 100%;
             }
             
-极           nav ul li {
+            nav ul li {
                 margin: 1rem 0;
             }
             
@@ -940,7 +940,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="LOGO (2).png" alt="ARSD FIC Logo">
+            <img src="ficlogo1.png" alt="ARSD FIC Logo">
         </div>
         <nav>
             <ul>
@@ -1137,7 +1137,7 @@ aspirations of the students
                         <p>Commerce Major, 3rd Year</p>
                         <div class="member-social">
                             <a href="https://www.linkedin.com/in/devansh-gupta-185215218/"><i class="fab fa-linkedin"></i></a>
-                            <a href="devanshharish@gmail.com"><i class="fas fa-envelope"></i></a>
+                            <a href="mailto:devanshharish@gmail.com"><i class="fas fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
