--- a/index.html
+++ b/index.html
@@ -1522,7 +1522,8 @@ Let’s build something meaningful together.<br>
                 <div class="section-divider"></div>
             </div>
             <div style="text-align: center; margin-top: 2rem;">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.769030044476!2d77.20622321508145!3d28.567258782440498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce269b1c00001%3A0x7d9b3b5e7d1f4b5d!2sAtma%20Ram%20Sanatan%20Dharma%20College!5e0!3m2!1sen!2sin!4v1624440000000!5m2!1sen!2sin" width="100%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1751.6445834269791!2d77.1655455882185!3d28.59110069554846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1d14133d7701%3A0xec05e1fdbf82d1f6!2sATMA%20RAM%20SANATAN%20DHARMA%20COLLEGE%2C%20Dhaula%20Kuan%20Enclave%20I%2C%20Dhaula%20Kuan%2C%20New%20Delhi%2C%20Delhi%20110021!5e0!3m2!1sen!2sin!4v1750578852504!5m2!1sen!2sin"  width="100%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy"></iframe>
+                
             </div>
         </section>
     </div>
