--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
 
         <!-- Sponsors Section -->
         <section class="sponsors-section">
-            <h2 class="sp极onsors-title">OUR PARTNERS & SPONSORS</h2>
+            <h2 class="sponsors-title">OUR PARTNERS & SPONSORS</h2>
             <div class="sponsors-container">
                 <div class="sponsor-item">
                     <img src="xtcy.jpg" alt="Sponsor 1">
